# polkit-qt-example

./: CMakeLists.txt  README.md  com.polkit.qt.example.conf  com.polkit.qt.example.dbus.service  com.polkit.qt.example.dbus.xml  com.polkit.qt.example.policy  com.polkit.qt.example.service  cpserver.sh  polkit-qt-example.service  rmserver.sh
client/: dbus_interface.cpp  dbus_interface.h  main.cpp  mainwindow.cpp  mainwindow.h
service/: PolicyKitHelper.cpp  PolicyKitHelper.h  dbus.cpp  dbus.h  dbus_adaptor.cpp  dbus_adaptor.h  main.cpp  main.h
